Black-Scholes header added

--- a/G5260.vcxproj
+++ b/G5260.vcxproj
@@ -165,6 +165,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="fmsbsm.h" />
     <ClInclude Include="G5260.h" />
   </ItemGroup>
   <ItemGroup>
